:zap: modified isAvailable method #19 #20 #22